--- a/ionic-esdeveniments/src/app/tabs/tabs.page.html
+++ b/ionic-esdeveniments/src/app/tabs/tabs.page.html
@@ -1,8 +1,8 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
+    <ion-tab-button tab="createEvent">
+      <ion-icon name="add-outline"></ion-icon>
       <ion-label>Tab 1</ion-label>
     </ion-tab-button>
 
