--- a/ionic-esdeveniments/src/app/pages/listEvents/listEvents.page.html
+++ b/ionic-esdeveniments/src/app/pages/listEvents/listEvents.page.html
@@ -13,5 +13,11 @@
     </ion-toolbar>
   </ion-header>
 
+  <ion-fab horizontal="end" vertical="bottom" slot="fixed">
+    <ion-fab-button color="primary" (click) ="createModal()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
   <app-explore-container name="Tab 2 page"></app-explore-container>
 </ion-content>
