--- a/ionic-esdeveniments/src/app/pages/event-detail/event-detail.page.html
+++ b/ionic-esdeveniments/src/app/pages/event-detail/event-detail.page.html
@@ -31,8 +31,15 @@
             <ion-datetime displayFormat="DD/MM HH:mm"  id="endTime" value="{{event.endTime}}"  readonly></ion-datetime>
           </ion-item>
           <ion-item>
-            <ion-label>Participants: </ion-label>
+            <ion-label>Participants apuntats: </ion-label>
             <ion-input type="text" class="form-control input-text-custom" id="participants"  value="{{event.numEnrolledParticipants}}/{{event.numParticipants}}" readonly></ion-input>
+          </ion-item>
+          <ion-item *ngIf="joined" expandable>
+            <ion-list >
+              <ion-item *ngFor="let user of event.participants">
+                <ion-input type="text" class="form-control input-text-custom"  value="{{user.name}} {{user.surname}}" readonly></ion-input>
+              </ion-item>
+            </ion-list>
           </ion-item>
           <ion-button *ngIf="!joined"  id="submitButton" color="success" expand="block" size="large" (click) = "joinEvent(event.eventId['value'])">Unir-se</ion-button>
           <ion-button *ngIf="joined"  id="submitButton" color="danger" expand="block" size="large" (click) = "leaveEvent(event.eventId['value'])">Abandona</ion-button>
