--- a/ionic-esdeveniments/src/app/pages/register/register.page.html
+++ b/ionic-esdeveniments/src/app/pages/register/register.page.html
@@ -21,19 +21,45 @@
         <ion-item *ngIf="f.submitted && !surname.valid" class="help-block" no-lines color="danger">
           <ion-label>El cognom és obligatori.</ion-label>
         </ion-item>
+        <ion-item>
+					<ion-input type="text" placeholder="D.N.I" class="form-control input-text-custom" id="dni" name="dni" [(ngModel)]="user.dni" #dni="ngModel" required></ion-input>
+        </ion-item>
+        <ion-item *ngIf="f.submitted && !dni.valid" class="help-block" no-lines color="danger">
+          <ion-label>El DNI és obligatori.</ion-label>
+        </ion-item>
+        <ion-item>
+					<ion-input type="tel" placeholder="Telèfon" id="phone" name="phone" [(ngModel)]="user.phone" #phone="ngModel" required></ion-input>
+        </ion-item>
+        <ion-item *ngIf="f.submitted && !phone.valid" class="help-block" no-lines color="danger">
+          <ion-label>El telèfon és obligatori.</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label position="stacked"></ion-label>
+          <ion-input type="text" placeholder="Adreça" class="form-control input-text-custom" id="address" name="address" [(ngModel)]="user.address" #address="ngModel" required></ion-input>
+          <ion-input type="text" placeholder="Ciutat" class="form-control input-text-custom" id="city" name="city" [(ngModel)]="user.city" #city="ngModel" required></ion-input>
+          <ion-input type="text" placeholder="Codi postal" class="form-control input-text-custom" id="zipcode" name="zipcode" [(ngModel)]="user.zipcode" #zipcode="ngModel" required></ion-input>
+        </ion-item>
+        <ion-item *ngIf="f.submitted && !address.valid" class="help-block" no-lines color="danger">
+          <ion-label>La adreça és obligatòria</ion-label>
+        </ion-item>
+        <ion-item *ngIf="f.submitted && !city.valid" class="help-block" no-lines color="danger">
+          <ion-label>La ciutat és obligatòria</ion-label>
+        </ion-item>
+        <ion-item *ngIf="f.submitted && !zipcode.valid" class="help-block" no-lines color="danger">
+          <ion-label>El codi postal és obligatori</ion-label>
+        </ion-item>
 				<ion-item>
 					<ion-input type="text" placeholder="Correu electrònic" class="form-control input-text-custom" id="email" name="email" [(ngModel)]="user.email" #email="ngModel" required></ion-input>
         </ion-item>
         <ion-item *ngIf="f.submitted && !email.valid" class="help-block" no-lines color="danger">
           <ion-label>Un correu electònic vàlid és obligatori.</ion-label>
         </ion-item>
-
 				<ion-item>
 					<ion-input type="password" placeholder="Contrasenya" class="form-control input-text-custom" id="password" name="password" pattern=".{8,}"  [(ngModel)]="user.password" #password="ngModel" required></ion-input>
         </ion-item>
         <ion-item *ngIf="f.submitted && !password.valid" class="help-block" no-lines color="danger">
           <ion-label>Contrasenya obligatòria (mínim 8 caràcters)</ion-label>
-        </ion-item>
+        </ion-item>        
 			</div>
 
 			<div padding>
