--- a/ionic-esdeveniments/src/app/pages/tabs/tabs.page.html
+++ b/ionic-esdeveniments/src/app/pages/tabs/tabs.page.html
@@ -1,18 +1,18 @@
 <ion-tabs>
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar slot="bottom" selectedTab="listEvents">
     <ion-tab-button tab="listJoinedEvents" >
-      <ion-icon name="add-outline"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+      <ion-icon name="book-outline"></ion-icon>
+      <ion-label>Your events</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="listEvents">
       <ion-icon name="home-outline"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+      <ion-label>Home</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
+    <ion-tab-button tab="profile">
       <ion-icon name="person-outline"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+      <ion-label>Profile</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
