afegir omplir formularis

--- a/ionic-esdeveniments/src/app/pages/event-detail/event-detail.page.html
+++ b/ionic-esdeveniments/src/app/pages/event-detail/event-detail.page.html
@@ -44,6 +44,7 @@
           </ion-item>
           <ion-button *ngIf="!joined"  id="submitButton" color="success" expand="block" size="large" (click) = "joinEvent(event.eventId['value'])">Unir-se</ion-button>
           <ion-button *ngIf="joined && !creator"  id="submitButton" color="danger" expand="block" size="large" (click) = "leaveEvent(event.eventId['value'])">Abandona</ion-button>
+          <ion-button *ngIf="creator"  id="submitButton" color="danger" expand="block" size="large" (click) = "deleteEvent(event.eventId['value'])">Elimina</ion-button>
         </div>
       </ion-col>
     </ion-row>
