--- a/ionic-esdeveniments/src/app/pages/profile/profile.page.scss
+++ b/ionic-esdeveniments/src/app/pages/profile/profile.page.scss
@@ -2,6 +2,10 @@ ion-icon{
     font-size: 30px;
 }
 
+ion-textarea{
+    height: 200px;
+}
+
 #logout{
     margin-right: 10px;
 }
@@ -13,3 +17,4 @@ ion-icon{
         color: red;
     }
 }
+
